* make sure data types are large enough
* API:
  - add get resource name functions
* create gerenic solution to store resource data ?
* detect invalid padding
* use libfcache/libfdata in libwrc ? otherwise remove it
* language table
  - cache last language ?

Tools:
* wrcinfo:
  - what about PE/COFF files with multiple .rsrc sections?
* wrcmount
  - create

20140928
* removed README.macosx

20140803
* bug fix in Python-bindings

20140328
* updated dependencies
* Worked on Python bindings

20140209
* worked on format support

20140128
* worked on stripping trailing 0-byte values from message table strings
* improved handling of version resource

20140127
* Worked on Python bindings
  - clean up and bug fixes
  - added MUI type support

20140112
* small fixes for file IO handle opened in library changes

20140105
* 2014 update
* updated dependencies

20131230
* Worked on Python bindings

20131229
* updated dependencies

20131027
* Worked on Python bindings

20131017
* updated dependencies

20130909
* updated dependencies
* worked on libcthreads build support
* updated msvscpp files

20130530
* Worked on version resource support

20130528
* Worked on Python bindings
* Worked on version resource support

20130527
* Worked on Python bindings

20130526
* Worked on Python bindings

20130515
* updated dependencies
* moved examples to project site wiki
* added macosx files
* added Python bindings

20130421
* updated dependencies

20130413
* updated dependencies

20130405
* 2013 update
* updated dependencies
* Moved project to separate project site

20120402
* updated dependencies
* changes for libfdata update

20120319
* updated dependencies
* changes for libfdata update

20130310
* 2013 update
* fixed spec file
* updated dependencies
* updated msvscpp files

20121214
* worked on WEVT_TEMPLATE support

20121119
* worked on WEVT_TEMPLATE support

20121106
* code clean up

20121031
* bug fixes and code clean up

20121030
* bug fixes and code clean up

20121029