@@ -1,4 +1,10 @@
-See:
-* http://code.google.com/p/libwrc/wiki/Building
-* README.macosx
+libwrc is a library to access the Windows Resource Compiler (WRC) format.
+
+Planned:
+* Multi-threading support
+* Python 3 support
+
+For more information see:
+* Project documentation: https://github.com/libyal/libwrc/wiki/Home
+* How to build from source: https://github.com/libyal/libwrc/wiki/Building
 
