@@ -11,7 +11,7 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSYTdIQVF0Z2hKRTA/"
 
 [git]
-url: "https://code.google.com/p/libwrc/"
+url: "https://github.com/libyal/libwrc.git"
 
 [tests]
 features: ["valgrind"]
