@@ -44,6 +44,7 @@ Tools:
 
 20140928
 * removed README.macosx
+* changes for project site move
 
 20140803
 * bug fix in Python-bindings
